--- a/05_Bayes_irysy.ipynb
+++ b/05_Bayes_irysy.ipynb
@@ -24,9 +24,9 @@
     "Kod napiszemy w oparciu o implementacje klasyfikatora Bayesa z biblioteki [scikit-learn](http://scikit-learn.org/stable/about.html#citing-scikit-learn)\n",
     "\n",
     "Zaczerpniemy stamtąd:\n",
-    "* obiekt klasyfikatora [GaussianNB](https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html)\n",
-    "* zbiór danych\n",
-    "* funkcje do oceny jakości "
+    "* obiekt klasyfikatora [GaussianNB](https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html),\n",
+    "* zbiór danych,\n",
+    "* funkcje do oceny jakości."
    ]
   },
   {
@@ -35,7 +35,7 @@
     "id": "_yOp4madZ7fZ"
    },
    "source": [
-    "Przygotopwanie śrdowiska: import wymaganych pakietów."
+    "Przygotowanie środowiska: import wymaganych pakietów."
    ]
   },
   {
@@ -116,10 +116,10 @@
    "source": [
     "Proszę zobaczyć co zawierają dane. Proszę wypisać:\n",
     "\n",
-    "* nazwy gatunków\n",
-    "* kodowanie gatunków, czyli liczby przypisane do nazw gatunków \"target\"\n",
-    "* nazwy zmiennych oppisujących gatunki \"feature_names\"\n",
-    "* opis danych \"DESCR\""
+    "* nazwy gatunków,\n",
+    "* kodowanie gatunków, czyli liczby przypisane do nazw gatunków \"target\",\n",
+    "* nazwy zmiennych oppisujących gatunki \"feature_names\",\n",
+    "* opis danych \"DESCR\"."
    ]
   },
   {
@@ -157,10 +157,10 @@
     "id": "iwNEvTXQZ7gA"
    },
    "source": [
-    "Proszę utworzyć obiekt DataFrame zawierający własności (\"features\"). \n",
-    "* proszę przypisać poprawne nazwy kolumn: ```columns=iris.feature_name```\n",
-    "* prodzę dodać do obiektu DataFrame kolumnę etykiet\n",
-    "* proszę wypisać zawartość obiektu DataFrame"
+    "Proszę utworzyć obiekt DataFrame zawierający własności (\"features\"):\n",
+    "* proszę przypisać poprawne nazwy kolumn: ```columns=iris.feature_name```,\n",
+    "* proszę dodać do obiektu DataFrame kolumnę etykiet,\n",
+    "* proszę wypisać zawartość obiektu DataFrame."
    ]
   },
   {
@@ -180,7 +180,7 @@
    "source": [
     "Proszę wypisać własności przykładu o indeksie 5. \n",
     "\n",
-    "* proszę zkorzystać z funkcji DataFrame.loc(index)\n",
+    "* proszę skorzystać z funkcji DataFrame.loc(index)\n",
     "\n",
     "Wynik powinien być następujący:\n",
     "```\n",
@@ -225,7 +225,7 @@
     "id": "FdTaCybgZ7gQ"
    },
    "source": [
-    "Proszę sprawdzić jaki gatunek odpowiada wartości etykiety przykładu o indekscie 5.\n",
+    "Proszę sprawdzić jaki gatunek odpowiada wartości etykiety przykładu o indeksie 5.\n",
     "Wynik powinien być następujący:\n",
     "```\n",
     "setosa\n",
@@ -264,10 +264,10 @@
     "id": "qVa4NHQ4Z7gX"
    },
    "source": [
-    "## Analiza wizualna danych. \n",
+    "## Analiza wizualna danych \n",
     "\n",
-    "Pierwszy krok przy analizie danych z użyciem dowolnego algorytmu to ich inspekcja. Korzystając z metod klasy DataFrame proszę:\n",
-    "* narysować rozkłady wszystkich zmiennych wejściowych"
+    "Pierwszy krok przy analizie danych z użyciem dowolnego algorytmu to ich inspekcja. Korzystając z metod klasy `DataFrame` proszę:\n",
+    "* narysować rozkłady wszystkich zmiennych wejściowych."
    ]
   },
   {
@@ -283,10 +283,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Naszym zadaniuem jest rozdzielenie gatunków na podstawie wartości własności. \n",
+    "Naszym zadaniem jest rozdzielenie gatunków na podstawie wartości własności: \n",
     "\n",
-    "* proszę narysować rozkłady (histogramy) własności w podziale na  gatunki. Rysując histogramy proszę dobrać zakresy przedziałów na podstawie histogramów narysowanych bez podziału na gatunki\n",
-    "* na podstawie histogramów proszę zitentyfikować cechy, które najlepiej odróżniają gatunki"
+    "* proszę narysować rozkłady (histogramy) własności w podziale na  gatunki. Rysując histogramy proszę dobrać zakresy przedziałów na podstawie histogramów narysowanych bez podziału na gatunki,\n",
+    "* na podstawie histogramów proszę zidentyfikować cechy, które najlepiej odróżniają gatunki."
    ]
   },
   {
@@ -310,10 +310,10 @@
    "source": [
     "## Wykres skrzypcowy (\"violin plot\")\n",
     "\n",
-    "Histogramy dla poszczególnych gatunków się nakładają częściowo. Inny sposób wizualizacji to wykres skrzypcowy.\n",
+    "Histogramy dla poszczególnych gatunków się nakładają częściowo. Inny sposób wizualizacji to wykres skrzypcowy:\n",
     "\n",
-    "* proszę narysować wykresy skrzypcowe dla poszzcególnych cech, z podziałem na gatunki\n",
-    "* na podstawie rysunków proszę zitentyfikować cechy, które najlepiej odróżniają gatunki"
+    "* proszę narysować wykresy skrzypcowe dla poszczególnych cech z podziałem na gatunki,\n",
+    "* na podstawie rysunków proszę zidentyfikować cechy, które najlepiej odróżniają gatunki."
    ]
   },
   {
@@ -333,10 +333,10 @@
    "source": [
     "## Analiza dwuwymiarowa\n",
     "\n",
-    "Rysunki narysowane do tej pory były jednowymiarowe. Kolejny krok to wizualna analiza korelacji międzu cechami.\n",
+    "Rysunki narysowane do tej pory były jednowymiarowe. Kolejny krok to wizualna analiza korelacji między cechami.\n",
     "\n",
-    "* proszę obliczyć macierz kowiariancji między wszystkimi kolumnami danych włączając etykiety\n",
-    "* proszę narysować macierz kowariancji"
+    "* proszę obliczyć macierz kowariancji między wszystkimi kolumnami danych włączając etykietym,\n",
+    "* proszę narysować macierz kowariancji."
    ]
   },
   {
@@ -357,7 +357,7 @@
    "source": [
     "Macierz kowariancji często jest mało czytelna. Wygodniejsze do analizy są rozkłady dwuwymiarowe - na osiach rysunku odkładamy dwie wybrane cechy. \n",
     "Proszę uruchomić kod w komórce poniżej i zanalizować korelacje między cechami.\n",
-    "Więcej przykładów wyzializacji można znaleźć [tutaj](https://seaborn.pydata.org/tutorial/axis_grids.html)"
+    "Więcej przykładów wyzualizacji można znaleźć [w dokumentacji](https://seaborn.pydata.org/tutorial/axis_grids.html)."
    ]
   },
   {
@@ -381,15 +381,15 @@
     "## Przygotowanie danych wejściowych\n",
     "\n",
     "Aby ułatwić analizę wyniku działania modelu ograniczymy się do dwu cech - wtedy będzie można narysować podział na gatunki na płaszczyźnie.\n",
-    "Znoprmalizujemy też wartości cech: \n",
+    "Znormalizujemy też wartości cech: \n",
     "\n",
     "\\begin{equation}\n",
     "x_{norm} = \\frac{x - \\mu_{x}}{\\sigma_{x}}\n",
     "\\end{equation}\n",
     "\n",
-    "* proszę utworzyć dane zawierające znormalizowane kolumny: \n",
-    "* proszę utworzyć dane zawierające tylko wybrane cechy, oraz etykiety: ```[\"sepal width (cm)\",\"petal length (cm)\", \"label\"]```\n",
-    "* proszę wypisać zawartość nowych danych\n",
+    "* proszę utworzyć dane zawierające znormalizowane kolumny,\n",
+    "* proszę utworzyć dane zawierające tylko wybrane cechy, oraz etykiety: ```[\"sepal width (cm)\",\"petal length (cm)\", \"label\"]```,\n",
+    "* proszę wypisać zawartość nowych danych.\n",
     "\n",
     "**Uwaga:** proszę nie normalizować wartości etykiet"
    ]
@@ -430,8 +430,8 @@
    "source": [
     "## Tworzymy i uczymy klasyfikator\n",
     "\n",
-    "Poniżej znajduje się kod służący klasyfikacji. Proszę go uzupełnić zgodnie z komentarzami i dokumentacją:\n",
-    "[naive_bayes](https://scikit-learn.org/stable/modules/naive_bayes.html) oraz [GaussianNB](https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html)"
+    "Poniżej znajduje się kod służący do klasyfikacji. Proszę go uzupełnić zgodnie z komentarzami i dokumentacją:\n",
+    "[naive_bayes](https://scikit-learn.org/stable/modules/naive_bayes.html) oraz [GaussianNB](https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html)."
    ]
   },
   {
@@ -455,11 +455,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "* proszę wypisać parametry dopasowanie: średnie i odchylenia standardowe rozkładów Gaussa. Średnie tych rozkładów znajdująsię w polu  ```gnb.theta_```, a wariancje\n",
-    "  w ```gnb.sigma_```\n",
-    "* prosze wypisać średnie i wariancje rozkładów cech w podziale na gatunki\n",
+    "* Proszę wypisać parametry dopasowanie: średnie i odchylenia standardowe rozkładów Gaussa. Średnie tych rozkładów znajdują się w polu  ```gnb.theta_```, a wariancje\n",
+    "  w ```gnb.sigma_```,\n",
+    "* prosze wypisać średnie i wariancje rozkładów cech w podziale na gatunki.\n",
     "\n",
-    "**Wskazówka:** proszę skorzystać z grupowania danych: DataFrame.groupby()\n",
+    "**Wskazówka:** proszę skorzystać z grupowania danych: `DataFrame.groupby()`.\n",
     "\n",
     "Oczekiwany wynik dla parametrów to:\n",
     "```\n",
@@ -494,11 +494,11 @@
     "id": "eatL-qfbZ7g0"
    },
    "source": [
-    "#### Porównanie dopasowanych rozkładów z danymi.\n",
+    "#### Porównanie dopasowanych rozkładów z danymi\n",
     "Komórki poniżej zawierają funkcje:\n",
     "\n",
-    "* ```plot_2d_gaussian(mean, covariance, axis)``` - funkcja która rysuje dwuwymiarowy rozkłąd Gaussa o średniej ```mean``` i diagonalej macierzy kowariancji ```np.diag(cov)``` na obszarze danymn przez obiekt ```axis```\n",
-    "* ```plot_2d_divison(model, axis)``` - funkcja która rysuje kontury podziału na klasy na podstawie modelu ```model``` na obszarze danymn przez obiekt ```axis```"
+    "* ```plot_2d_gaussian(mean, covariance, axis)``` - funkcja która rysuje dwuwymiarowy rozkład Gaussa o średniej ```mean``` i diagonalej macierzy kowariancji ```np.diag(cov)``` na obszarze danymn przez obiekt ```axis```,\n",
+    "* ```plot_2d_divison(model, axis)``` - funkcja która rysuje kontury podziału na klasy na podstawie modelu ```model``` na obszarze danym przez obiekt ```axis```."
    ]
   },
   {
@@ -527,8 +527,8 @@
    "source": [
     "Proszę narysować:\n",
     "\n",
-    "* dwuwymiarowy rozkład danych dla analizowanego zbioru, korzystając z funkcji ```sns.jointplot```. Punkty powinny być pokolorowane według przyneleżności do gatunku.\n",
-    "* korzystając z funkcji ```plot_2d_gaussian(mean, covariance, axis)``` na tym samym wykresie nanieść rozkłady Gaussa dopasowane przez model ```gnb = GaussianNB()```"
+    "* dwuwymiarowy rozkład danych dla analizowanego zbioru, korzystając z funkcji ```sns.jointplot```. Punkty powinny być pokolorowane według przynależności do gatunku,\n",
+    "* korzystając z funkcji ```plot_2d_gaussian(mean, covariance, axis)``` na tym samym wykresie nanieść rozkłady Gaussa dopasowane przez model ```gnb = GaussianNB()```."
    ]
   },
   {
@@ -551,8 +551,8 @@
    "source": [
     "Proszę narysować:\n",
     "\n",
-    "* dwuwymiarowy rozkład danych dla analizowanego zbioru, korzystając z funkcji ```sns.jointplot```. Punkty powinny być pokolorowane według przyneleżności do gatunku.\n",
-    "* korzystając z funkcji ```plot_2d_divison(model, axis)``` na tym samym wykresie nanieść granice podziału na gatunki"
+    "* dwuwymiarowy rozkład danych dla analizowanego zbioru, korzystając z funkcji ```sns.jointplot```. Punkty powinny być pokolorowane według przynależności do gatunku,\n",
+    "* korzystając z funkcji ```plot_2d_divison(model, axis)``` na tym samym wykresie nanieść granice podziału na gatunki."
    ]
   },
   {
@@ -573,10 +573,10 @@
    },
    "source": [
     "## Analiza jakości modelu\n",
-    "Korzystająć z walidacji krzyżowej przeprowadzimy analizę miar jakości modeli. Skorzystamy z funkcji dostrczanych przez [Model evaluation](http://scikit-learn.org/stable/modules/model_evaluation.html)\n",
-    "* upewnij się, że dokładnie rozumiesz co zwracają te funkcje [(sprawdź w dokumentacji)]\n",
-    "* porównaj z definicjami z [wykładu](https://brain.fuw.edu.pl/edu/index.php/Uczenie_maszynowe_i_sztuczne_sieci_neuronowe/Wyk%C5%82ad_Ocena_jako%C5%9Bci_klasyfikacji) \n",
-    "* proszę uzupełnić kod funkcji ```printScores(model, X, Y)``` - która przyjmuje dopasowany ```model```, cechy ```X``` oraz etykiety ```Y```\n",
+    "Korzystając z walidacji krzyżowej przeprowadzimy analizę miar jakości modeli. Skorzystamy z funkcji dostarczanych przez [Model evaluation](http://scikit-learn.org/stable/modules/model_evaluation.html):\n",
+    "* upewnij się, że dokładnie rozumiesz, co zwracają te funkcje (sprawdź w dokumentacji),\n",
+    "* porównaj z definicjami z [wykładu](https://brain.fuw.edu.pl/edu/index.php/Uczenie_maszynowe_i_sztuczne_sieci_neuronowe/Wyk%C5%82ad_Ocena_jako%C5%9Bci_klasyfikacji),\n",
+    "* proszę uzupełnić kod funkcji ```printScores(model, X, Y)```, która przyjmuje dopasowany ```model```, cechy ```X``` oraz etykiety ```Y```,\n",
     "* korzystając z funkcji ```printScores(model, X, Y)``` proszę wypisać wartości miar jakości dla modelu dopasowanego w poprzednich komórkach."
    ]
   },
@@ -605,12 +605,11 @@
    "source": [
     "## Porównanie  modeli\n",
     "\n",
-    "\n",
     "Korzystając z kodu napisanego w poprzednich komórkach stwórz trzy modele klasyfikatorów:\n",
-    "* pierwszym niech będzie korzystał z cech ```[\"sepal width (cm)\",\"petal length (cm)\"]``` (nasz dotychczasowy model)\n",
-    "* drugim niech korzysta tylko z cech ```[\"sepal length (cm)\",\"sepal width (cm)\"]```\n",
-    "* trzeci niech korzysta ze wszytkich czterech cech\n",
-    "* dla każdego z modeli wypisz wartości miar jakości. Prównaje te wartości między modelami."
+    "* pierwszym niech będzie korzystał z cech ```[\"sepal width (cm)\",\"petal length (cm)\"]``` (nasz dotychczasowy model),\n",
+    "* drugim niech korzysta tylko z cech ```[\"sepal length (cm)\",\"sepal width (cm)\"]```,\n",
+    "* trzeci niech korzysta ze wszytkich czterech cech,\n",
+    "* dla każdego z modeli wypisz wartości miar jakości. Porównaje te wartości między modelami."
    ]
   },
   {
@@ -679,8 +678,8 @@
    "source": [
     "## Analiza wpływu normalizacji danych.\n",
     "\n",
-    "* proszę wytenować model na wszytkich cechach, ale korzystając z oryginalnych danych - bez normalizacji wartości cech\n",
-    "* dla tego modelu proszę wypisać wartości miar jakości\n",
+    "* Proszę wytrenować model na wszytkich cechach, ale korzystając z oryginalnych danych - bez normalizacji wartości cech,\n",
+    "* dla tego modelu proszę wypisać wartości miar jakości.\n",
     "\n",
     "Czy normalizacja wpływa na wydajność naszego modelu?"
    ]
