--- a/06_Bayes_spam.ipynb
+++ b/06_Bayes_spam.ipynb
@@ -141,7 +141,7 @@
    "source": [
     "Proszę wypisać na ekran treść maila o indeksie **57**\n",
     "\n",
-    "**Wskazówka**: Indeksy obiektu DataFreame uzyskujemy przez pole ```DataFrame.index```"
+    "**Wskazówka**: Dostęp do danych o zadanych indeksach można uzyskać przez [`Dataframe.loc`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.loc.html#pandas.DataFrame.loc)"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "index = 57\n",
-    "print(df[...])"
+    "print(...)"
    ]
   },
   {
@@ -352,7 +352,7 @@
     "\n",
     "Proszę:\n",
     "* podzielić dane na część uczącą i treningową w stosunku **7:3**\n",
-    "* wytrenować klasyfikator mail korzysjając z naiwnego algorytmu Bayesa opartego o rozkład wielomianowy: ```MultinomialNB```"
+    "* wytrenować klasyfikator mail korzystając z naiwnego algorytmu Bayesa opartego o rozkład wielomianowy: ```MultinomialNB```"
    ]
   },
   {
@@ -384,7 +384,7 @@
     "Korzystając z funkcji napisanych na poprzednich ćwiczeniach:\n",
     "\n",
     "* wykonać predykcję na danych testowych\n",
-    "* wypisać na ekran wartości metryk o raz macierz pomyłek"
+    "* wypisać na ekran wartości metryk oraz macierz pomyłek"
    ]
   },
   {
@@ -419,7 +419,7 @@
     "* stworzyć listę zawierającą indeksy posortowanych współczynników: ```np.argsort(...)```\n",
     "* wypisać na ekran po 10 słów o największych i najmniejszych wartościach współczynników.\n",
     "\n",
-    "**Wskazówka** by listę słów moć adresować listą indeksów, listę słów trzeba zamienić na macierz numpy."
+    "**Wskazówka** by listę słów móc adresować listą indeksów, listę słów trzeba zamienić na macierz numpy."
    ]
   },
   {
@@ -455,13 +455,13 @@
    "source": [
     "## Działanie modelu na nieznanych słowach.\n",
     "\n",
-    "Model jedynie rozpoznaje poszczególne słowa, be żadnej analizy językowej. Dodamy pewien element analizy językowej.\n",
+    "Model jedynie rozpoznaje poszczególne słowa, bez żadnej analizy językowej. Dodamy pewien element analizy językowej.\n",
     "Proszę:\n",
     "\n",
     "* wybrać dowolne, bezsensowne słowo które nie występuje w słowniku i sprawdzić, że tak jest\n",
     "* dokończyć zdanie : ``Life is`` tym słowem\n",
-    "* wypisać postać ptrzetransformowaną, oraz jej transformację odwrotną\n",
-    "* sprawdzić jak na nie zareaguje model"
+    "* wypisać postać przetransformowaną, oraz jej transformację odwrotną\n",
+    "* sprawdzić, jak na nie zareaguje model"
    ]
   },
   {
@@ -493,7 +493,7 @@
     "id": "pCgizjFcmQOr"
    },
    "source": [
-    "### Stemming (nawet nie będę próbować tego tłumaczyć na polski, to [bogate](https://pl.bab.la/slownik/angielski-polski/stemming) znaczeniowo słowo)\n",
+    "### Stemming (bez tłumaczenia na polski, to [bogate](https://pl.bab.la/slownik/angielski-polski/stemming) znaczeniowo słowo)\n",
     "\n",
     "Polega na ujednoliceniu słów o tym samym rdzeniu znaczeniowym (o czym maszyna, oczywiście, nie ma szans wiedzieć). Np. dzięki stemmingowi słowa \"go\", \"going\" i \"goes\" są przyporządkowane tylko jednemu słowu \"go\". Można np. użyć gotowego algorytmu stemmingowego o nazwie [Porter Stemmer](https://tartarus.org/martin/PorterStemmer/).\n",
     "\n",
@@ -587,20 +587,20 @@
    "source": [
     "Powtórzmy trening i testowanie naszego klasyfikatora na danych poddanych stemmingowi. Proszę:\n",
     "\n",
-    "* stworzyć zmienną zawierająca kolumnę treścni maili\n",
-    "* poddać ją traqnsformacji za użyciem klasy ```PorterStemmer```\n",
+    "* stworzyć zmienną zawierająca kolumnę treści maili\n",
+    "* poddać ją transformacji z użyciem klasy ```PorterStemmer```\n",
     "* podzielić dane na części uczącą i testową\n",
     "* następnie wytrenować i poddać transformacji za pomocą ```CountVectorizer```\n",
     "* następnie wytrenować model i wypisać dla niego wartości metryk\n",
     "\n",
-    "**Wskazówka** do transformacji kolumny słów użyć linii, które definiowała zmienną ```words``` w komórce powyżej."
+    "**Wskazówka** do transformacji kolumny słów użyć linii, które zdefiniowano zmienną ```words``` w komórce powyżej."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wracamy do pracy nad zbiorem mejli"
+    "### Wracamy do pracy nad zbiorem maili"
    ]
   },
   {
