--- a/11_CNN_data_augmentation.ipynb
+++ b/11_CNN_data_augmentation.ipynb
@@ -1,6 +1,6 @@
 {
  "cells": [
- {
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -30,9 +30,9 @@
    "source": [
     "# Sieci neuronowe ze splotem (konwolucyjne)\n",
     "\n",
-    "Dzisiaj poznamy prawdopodobnie najpopularniejszy model sieci neuronowej zaprojektowany do klasyfikacji obrazków wszelkiego rodzaju, a bardziej precyzyjnie: do wszelkich danych, w których istotna jest zależność przestrzenna. Zbudujemy przykładową sieć ze splotem (convolutional neural network, CNN) \n",
+    "Dzisiaj poznamy prawdopodobnie najpopularniejszy model sieci neuronowej zaprojektowany do klasyfikacji obrazków wszelkiego rodzaju, a bardziej precyzyjnie: do wszelkich danych, w których istotna jest zależność przestrzenna. Zbudujemy przykładową sieć ze splotem (convolutional neural network, CNN).\n",
     "\n",
-    "Dodatkoweo użyjemy tecdhniki wzbogacania zbioru danych - `data augmentation`\n",
+    "Dodatkowo użyjemy techniki wzbogacania zbioru danych - `data augmentation`\n",
     "Technika polega na generowaniu dodatkowych danych z istniejącego zestawu, bazując na prostych transformacjach - rotacjach, przerzucaniu, podkreślaniu krawędzi, itd. \n",
     "\n",
     "Dziś nadal będziemy pracować na zbiorze MNIST, czyli zbiorze czarno-białych obrazków z ręcznie napisanymi cyframi."
@@ -44,7 +44,7 @@
    "source": [
     "## Przygotowanie środowiska programistycznego\n",
     "\n",
-    "By zapewnić powtarzalność wyników ustawiany ziarno generatora liczb losowych:\n",
+    "By zapewnić powtarzalność wyników ustawiamy ziarno generatora liczb losowych:\n",
     "```\n",
     "seed = 128\n",
     "rng = np.random.RandomState(seed)\n",
@@ -107,7 +107,7 @@
     "\n",
     "Proszę:\n",
     "\n",
-    "* wczytać dane korzysatając z funkcji ```keras.datasets.mnist.load_data()```\n",
+    "* wczytać dane korzystając z funkcji ```keras.datasets.mnist.load_data()```\n",
     "* wypisać na ekran kształ danych uczących i testowych. Ile jest przykładów uczących i testowych? Jaką rozdzielczośc mają analizowane rysunki?\n",
     "* korzystając z funkcji ```matplotlib.pyplot.imshow()``` narysować przykład numer 0 z danych uczących i wypisać jego etykietę"
    ]
@@ -133,15 +133,15 @@
     "\n",
     "\n",
     "Sieci ze splotem przyjmują na wejściu kolorowe obrazy. Kształt pojedynczego przykładu to: `(x pixels, y pixels, channels)`, gdzie:\n",
-    "- x, y pixels - liczba pikspeli w obu kierunkach\n",
+    "- x, y pixels - liczba pikseli w obu kierunkach\n",
     "- channels - liczba kolorów, czyli \"kanałów\"\n",
     "\n",
     "Dane które analizujemy mają postać dwuwymiarowych macierzy o kształcie `(x pixels, y pixels)`. Proszę:\n",
     "\n",
     "\n",
-    "* zmienić kształ danych wejścionych na `(x pixels, y pixels, channels)`. W naszym przypku mamy jeden kolor, czyli kanał. \n",
+    "* zmienić kształ danych wejściowych na `(x pixels, y pixels, channels)`. W naszym przypadku mamy jeden kolor, czyli kanał. \n",
     "* wypisać kształ macierzy po spłaszeniu. Czy wymiar jest zgodny z oczekiwaniem?\n",
-    "* znormalizować wartości danych do zakresu **[0,1]** korzysatając z funkcji ```numpy.amax(...)```\n",
+    "* znormalizować wartości danych do zakresu **[0,1]** korzystając z funkcji ```numpy.amax(...)```\n",
     "\n",
     "Oczekiwany rezultat to:\n",
     "\n",
@@ -183,7 +183,7 @@
     "## Zmiana reprezentacji etykiet\n",
     "\n",
     "Etykiety zawierają numer klasy - cyfry. Łatwiejszą do analizy postacią jest reprezentacja za pomocą słowa bitowego o długości równej licznie klas.\n",
-    "W takim słowie wszystkie bity, oprócz jednego - wsazującego na daną klasę mają wartość **0**:\n",
+    "W takim słowie wszystkie bity, oprócz jednego - wskazującego na daną klasę mają wartość **0**:\n",
     "\n",
     "```\n",
     "Original label encoding: 5 shape: (60000,)\n",
@@ -221,7 +221,7 @@
    "source": [
     "## Stworzenie  architektury sieci konwolucyjnej\n",
     "\n",
-    "W dzisejszym modelu bedzimy używali nowych rodzajów warstw:\n",
+    "W dzisiejszym modelu będziemy używali nowych rodzajów warstw:\n",
     "\n",
     "* warstwy konwolucyjnej - klasy typu `tf.keras.layers.Conv2D` itd.\n",
     "\n",
@@ -232,8 +232,8 @@
     "- padding - co zrobić kiedy filtr wykracza poza dane, czyli gdyby w tym przykładzie filtr był 4x4: można ograniczyć ruch tylko do ruchów bez wychodzenia poza ramkę (padding = valid, domyślny), można zrobić ramkę powielającą piksele sąsiadujące (padding = same), można zrobić ramkę z zer, itd.\n",
     "\n",
     "\n",
-    "Wielkości modyfikowane w ramach treningu to wartości wag filtra posostałe wielkości to hiperparametry.\n",
-    "W sytuacji kiedy kanałów jest więcej niż jeden wartości dla wszyskich kanałów są domyślnie sumowane dla danego piksela. Zwykle każda wartwa splotu zawiera wiele filtrów, czyli wiele wariantów wartości wag."
+    "Wielkości modyfikowane w ramach treningu to wartości wag filtra pozostałe wielkości to hiperparametry.\n",
+    "W sytuacji kiedy kanałów jest więcej niż jeden wartości dla wszystkich kanałów są domyślnie sumowane dla danego piksela. Zwykle każda wartwa splotu zawiera wiele filtrów, czyli wiele wariantów wartości wag."
    ]
   },
   {
@@ -258,7 +258,7 @@
     "* maxpool - wybierany jest element o maksymalnej wartości\n",
     "* average pool - obliczana jest średnia elementów\n",
     "\n",
-    "W sytuacji kiedy kanałów jest więcej niż jeden operacja \"pooling\" jest wykonywana dla każdego kanału oddzielnie."
+    "W sytuacji, kiedy kanałów jest więcej niż jeden operacja \"pooling\" jest wykonywana dla każdego kanału oddzielnie."
    ]
   },
   {
@@ -280,7 +280,7 @@
    "source": [
     "### Definicja architektury sieci ze splotem (CNN)\n",
     "\n",
-    "Proszę zdefiniować sieć neuronową o archiketurze w pełni połączonej (ang. fully connected). Sieć powinna mieć:\n",
+    "Proszę zdefiniować sieć neuronową o architekturze w pełni połączonej (ang. fully connected). Sieć powinna mieć:\n",
     "* warstwę wejściową\n",
     "* warstwy ukryte złozone z par:\n",
     "    * warstwa `Conv2D` o parametrach: `filters=nFilters, kernel_size=kernel_size, activation=tf.nn.relu`\n",
@@ -288,18 +288,18 @@
     "\n",
     "* warstwę spłaszającą \n",
     "* warstwę gęstą o parametrach `nNeurons, activation=tf.nn.relu`\n",
-    "* wartę wyjściową z funkcją aktywacji ```sofmax```  \n",
+    "* wartwę wyjściową z funkcją aktywacji ```softmax```  \n",
     "\n",
     "Proszę:\n",
     "\n",
-    "* dokończyć funkcję ```getModel(nFilters, kernel_size, pool_size, nNeurons, nHiddenLayers, inputShape, outputWidth)``` która tworzy model o zdefiniowanej powyżej architekturze\n",
-    "* w funkcji skompilowac model tak by:\n",
+    "* dokończyć funkcję ```getModel(nFilters, kernel_size, pool_size, nNeurons, nHiddenLayers, inputShape, outputWidth)```, która tworzy model o zdefiniowanej powyżej architekturze\n",
+    "* w funkcji skompilowac model, tak by:\n",
     "    * jako algorytmu minimalizacji używał `adam`\n",
     "    * jako funkcji straty używał `categorical_crossentropy`\n",
     "    * jako metryki używał `accuracy`\n",
     "* obliczyć samodzielnie liczbę parametrów pierwszej warstwy \"MaxPool\" i porównać ją z wynikiem działania funkcji ```model.summary(...)```\n",
-    "* porównać liczbę parametrów w obencym modelu i modelu z poprzednich zajęć\n",
-    "* obejrzeć rysunek przedstawiający architekturę modelu, uzysdkany przy pomocy funkcji ```tf.keras.utils.plot_model(...)```"
+    "* porównać liczbę parametrów w obecnym modelu i modelu z poprzednich zajęć\n",
+    "* obejrzeć rysunek przedstawiający architekturę modelu, uzyskany przy pomocy funkcji ```tf.keras.utils.plot_model(...)```"
    ]
   },
   {
@@ -339,7 +339,7 @@
     "\n",
     "* przeprowadzić trening dla `10` epok z rozmiarem paczki wynoszącym `128`\n",
     "\n",
-    "**Uwaga**: proszę pełączyć śrdowisko wykonawcze by używało karty graficznej \"GPU\": z menu na górze:\n",
+    "**Uwaga**: proszę przełączyć środowisko wykonawcze by używało karty graficznej \"GPU\": z menu na górze:\n",
     "```\n",
     "Środowisko wykonawcze -> Zmień typ środowiska wykonawczego\n",
     "```\n",
@@ -354,7 +354,7 @@
     "\n",
     "Proszę:\n",
     "* porównać wartości metryki na danych uczących i walidacyjnych. Jaki wniosek wynika z tego porównania?\n",
-    "* porównać metryki obecnego modelu z modelem z siecią gęstą. Jaki się sprawuje obecny model? \n",
+    "* porównać metryki obecnego modelu z modelem z siecią gęstą. Jak się sprawuje obecny model? \n",
     "\n",
     "**Wskazówka**: w czasie treningu proszę użyć parametru ```validation_split=0.3``` by uzyskać automatyczny podział danych uczących na uczące i walidacyjne."
    ]
@@ -376,7 +376,7 @@
    "source": [
     "## Analiza historii treningu\n",
     "\n",
-    "Proszę uzupełnić funkcję ```plotTrainingHistory(model)``` tak by tworzyła wykresy:\n",
+    "Proszę uzupełnić funkcję ```plotTrainingHistory(model)```, tak by tworzyła wykresy:\n",
     "\n",
     "* na jednym wykresie wartości metryki w funkcji numeru epoki obliczone dla danych uczących i treningowych\n",
     "* na drugim wykresie funkcji straty  w zależności od numeru epoki obliczone dla danych uczących i treningowych\n",
@@ -405,7 +405,7 @@
    "source": [
     "## Analiza klasyfikacji\n",
     "\n",
-    "Proszę dokończyć funkcję `printScores(model, X, Y)` która wypisuje na erkan:\n",
+    "Proszę dokończyć funkcję `printScores(model, X, Y)`, która wypisuje na erkan:\n",
     "* raport klasyfikacji\n",
     "* macierz pomyłek\n",
     "\n",
@@ -413,7 +413,7 @@
     "\n",
     "**Wskazówka**: proszę użyć funkcji `printScores(model, X, Y)` zdefiniowanej na innych ćwiczeniach.\n",
     "\n",
-    "**Uwaga**: funkcje typu `sklearn.metrics.classification_report(...)` jako dane wejściowe przyjumują numery klas. Proszę użyć funkcji `numpy.argmax(...)` by z wektora \"one_hot\" uzyskać numer klasy o największym pradwopodobieństwie."
+    "**Uwaga**: funkcje typu `sklearn.metrics.classification_report(...)` jako dane wejściowe przyjmują numery klas. Proszę użyć funkcji `numpy.argmax(...)`, by z wektora \"one_hot\" uzyskać numer klasy o największym pradwopodobieństwie."
    ]
   },
   {
@@ -469,7 +469,7 @@
     "\n",
     "Proszę:\n",
     "\n",
-    "* napisać funkcję ```getModelWithDropout(nFilters, kernel_size, pool_size, nNeurons, nHiddenLayers, dropout_rate, inputShape, outputWidth)```\n",
+    "* napisać funkcję ```getModelWithDropout(nFilters, kernel_size, pool_size, nNeurons, nHiddenLayers, dropout_rate, inputShape, outputWidth)```,\n",
     "która zawiera warstwę `tf.keras.layers.Dropout()` po warstwie `MaxPool2D`. Dodatkowo parametry modelu powinny mieć regularyzację L2.\n",
     "* stworzyć nowy model `model_with_reg = getModelWithRegularisation(...)`\n",
     "* wytrenować model\n",
@@ -527,7 +527,7 @@
     "## Generacja dodatkowych danych (ang. data augmentation)\n",
     "\n",
     "Data augmentation polega na generowaniu dodatkowych danych z naszego zestawu danych, bazując na prostych transformacjach - rotacjach, przerzucaniu, podkreślaniu krawędzi, itd. To muszą być transformacje, o których wiemy, że nie powinny wpływać na informacje zawarte w naszych danych. \n",
-    "Możemy w ten sposób np. nauczyć maszynę, że tożsamośc obiektów na rysunkach nie zależy od ich orientacji. \n",
+    "Możemy w ten sposób np. nauczyć maszynę, że tożsamość obiektów na rysunkach nie zależy od ich orientacji. \n",
     "\n",
     "Dodatkowe dane mogą być uzyskane na różne sposoby. Jednym z nich jest dodanie do modelu warstwy która będzie losowo modyfikowała podany przykład.\n",
     "Tak warstwa jest aktywna **tylko** w czasie treningu. Lista dostępny modyfikacji w pakiecie TensorFlow jest \n",
@@ -559,7 +559,7 @@
     "\n",
     "Proszę:\n",
     "\n",
-    "* napisać funkcję, `getModelWithAugmentation(nFilters, kernel_size, pool_size, nNeurons, nHiddenLayers, dropout_rate, l2_lambda, inputShape, outputWidth)`\n",
+    "* napisać funkcję, `getModelWithAugmentation(nFilters, kernel_size, pool_size, nNeurons, nHiddenLayers, dropout_rate, l2_lambda, inputShape, outputWidth)`,\n",
     "  która tworzy model z warstwą \"data augmentation\", oraz pozostałymi warstwami takimi jak tworzone przez funkcję `getModelWithRegularisation(...)`\n",
     "* stworzyć nowy model `model_with_aug = getModelWithAugmentation(...)`\n",
     "* wytrenować model\n",
@@ -597,7 +597,7 @@
     "\n",
     "Proszę:\n",
     "\n",
-    "* wyskazać model, który będzie miał najmniejszą liczbę błednie zidentyfikowanych cyfr w zbiorze testowym."
+    "* wskazać model, który będzie miał najmniejszą liczbę błędnie zidentyfikowanych cyfr w zbiorze testowym."
    ]
   },
   {
